tests/pass/nivI.tiger
let
	var total := 0
	var i := 0
	var n := 10
	var testvar : int := 0
in
	testvar := i <= n ;
	while testvar do
	(
	total := total + i * i ;
	print (5) ;
	testvar := i <= n
	);
	print ( total )
end
