tests/fail/semantic/infixExp-1.tiger
let
      var x : int := 0
in
      x := 1 * "2"
end
